# Plutus

./: .gitignore  CMakeLists.txt  Kconfig  README.md
cmake/: FindWt.cmake
erp-server/: CMakeLists.txt
erp-server/include/model/: session.h  user.h
erp-server/src/: application.cpp  application.h  main.cpp  mainpage.cpp  mainpage.h  menu.cpp  menu.h  navigation.cpp  navigation.h
erp-server/src/model/: session.cpp  user.cpp
plutuslib/: CMakeLists.txt
plutuslib/include/db/: db_data_file.h  db_file_header.h  db_record_pointer.h
plutuslib/source/: db_data_file.cpp
ui/: README.md  docker-compose.yml
ui/src/: index.php
unittest/: CMakeLists.txt  db_file_header_test.cpp
util/: CMakeLists.txt
util/plutus/: CMakeLists.txt  main.cpp
